# wemo-ops-center

./: .gitignore  README.md  requirements.txt  wemo_manager.py  wemo_manager.spec  wemo_manager_v2.0.spec  wemo_manager_v2.py  wemo_manager_v3.py  wemo_manager_v3.spec  wemo_ops.py  wemo_ops.spec
.github/workflows/: docker-publish.yml  pypi-publish.yml
linux/: build_deb.sh  master_build_linux.sh  wemo_ops_linux.py
mac/: wemo_ops_mac.py  wemo_service_mac.py
mcp/: .gitignore  CHANGELOG.md  LICENSE  MCP_REGISTRY_SUBMISSION.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  migration.md  pyproject.toml  server.json
mcp/.github/: copilot-instructions.md
mcp/src/wemo_mcp_server/: __init__.py  __main__.py  server.py
mcp/tests/: test_e2e.py  test_server.py
universal/: build_deb.sh  build_mac.sh  build_rpm.sh  master_build_windows.bat  wemo_ops_universal.py  wemo_service_universal.py
universal-app/: .dockerignore  Dockerfile  build_deb.sh  build_hoobs_setup.bat  build_mac.sh  build_mac_app.sh  build_mac_tahoe.sh  build_rpm.sh  build_windows.bat  docker-compose.yml  entrypoint.sh  hoobs_installer.py  master_build_mac.sh  master_build_rpm.sh  wemo_ops_universal.py  wemo_server.py
universal-app/images/: WemoOpsCenter.icns
universal-app/static/css/: style.css
universal-app/static/js/: script.js
universal-app/templates/: index.html
universal-server/: .dockerignore  Dockerfile  build_deb_server.sh  build_rpm_server.sh  docker-compose.yml  entrypoint.sh  wemo_server.py
windows/: wemo_ops.py
