[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wemo-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for WeMo smart home device discovery and control"
authors = [
    {name = "apiarya", email = "izzasnvyp7@privaterelay.appleid.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "wemo", "smart-home", "belkin", "iot", "home-automation"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.25.0",
    "pywemo>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/qrussell/wemo-ops-center/tree/main/mcp"
Repository = "https://github.com/qrussell/wemo-ops-center.git"
Issues = "https://github.com/qrussell/wemo-ops-center/issues"

[project.scripts]
wemo-mcp-server = "wemo_mcp_server:main"

[tool.hatch.version]
path = "src/wemo_mcp_server/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wemo_mcp_server"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D213"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]